# NorthstarDiscordRPC

./: .gitignore  Cargo.toml  DiscordRPCV2.sln  NorthstarDiscordRPC.sln  README.md  build.rs  flake.nix
.github/workflows/: build.yml  release.yml
DiscordGameSDK/: README.md
DiscordRPC/: DiscordRPC.vcxproj  DiscordRPC.vcxproj.filters  discord_plugin.cpp  dllmain.cpp  manifest.json  pch.h
DiscordRPCV2/: DiscordRPCV2.vcxproj  DiscordRPCV2.vcxproj.filters  dllmain.cpp  dllmain.h  manifest.json  pch.h  plugin.cpp
DiscordRPCV2/lib/: lib.cpp  lib.h  loader.cpp  loader.h  logging.h  plugin_abi.h  plugin_lib.cpp  squirrel.cpp  squirrel.h  squirrelclasstypes.h  util.h
manifest/: Resource.rc  manifest.json
src/: discord.rs  invite_handler.rs  lib.rs  presence.rs  presense.rs  presense_bindings.rs  utils.rs
