[package]
name = "northstar-discord-rpc"
version = "12.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rrplug = "4.0.0"
rrplug = { git = "https://github.com/R2NorthstarTools/rrplug.git", rev = "e183295ec923a44427cdfac3d5c232853f48063d" }
discord-sdk = "0.3.2"
tokio = "1.26.0"
parking_lot = "0.12.1"

[lib]
name = "DiscordRPC"
crate-type = ["cdylib"]
