[package]
name = "northstar-discord-rpc"
version = "13.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = "=4.1.0"
discord-sdk = "0.3.2"
tokio = "1.26.0"
parking_lot = "0.12.1"

[lib]
name = "DiscordRPC"
crate-type = ["cdylib"]
